unpackaged/main/default/objects/ChampifyIo__Employee__c/ChampifyIo__Employee__c.object-meta.xml
<CustomObject>
    <label>Champify Employee</label>
    <nameField>
        <displayFormat>CHAMP-{000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Champify Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>