unpackaged/main/default/objects/ChampifyIo__Employee__c/fields/ChampifyIo__Company__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Champify Company</label>
    <referenceTo>ChampifyIo__Company__c</referenceTo>
    <relationshipLabel>Champify Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>