unpackaged/main/default/objects/ChampifyIo__Employee__c/fields/ChampifyIo__Email__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>