unpackaged/main/default/objects/ChampifyIo__Employee__c/fields/ChampifyIo__EmployeeId__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__EmployeeId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique identifier of this human&#39;s employment at a company</description>
    <label>Employee Id</label>
    <length>26</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>