unpackaged/main/default/objects/ChampifyIo__Employee__c/fields/ChampifyIo__Lead__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Champify Employees</relationshipLabel>
    <relationshipName>Champify_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>