unpackaged/main/default/objects/ChampifyIo__Employee__c/fields/ChampifyIo__Person__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Champify Person</label>
    <referenceTo>ChampifyIo__Person__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>