unpackaged/main/default/objects/ChampifyIo__Employee__c/fields/ChampifyIo__Title__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>